[gd_scene load_steps=6 format=3 uid="uid://ibu8wwjsus5c"]

[ext_resource type="Script" uid="uid://b6ftgsm6a3f8p" path="res://Scripts/colisor_text_box.gd" id="1_s1vuu"]
[ext_resource type="Script" uid="uid://hnnedxkee0th" path="res://Scripts/main.gd" id="1_sdsba"]
[ext_resource type="Script" uid="uid://b5nx4oysbgg26" path="res://Scripts/control.gd" id="2_sdsba"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kry3j"]
size = Vector2(73.3333, 32.2222)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjvhh"]
size = Vector2(81.1111, 41.1111)

[node name="TextBox" type="Node2D"]
script = ExtResource("1_sdsba")

[node name="ColisorTextBox" type="Area2D" parent="."]
position = Vector2(-265, 170)
scale = Vector2(1.8, 1.8)
script = ExtResource("1_s1vuu")

[node name="HitboxTextBox" type="StaticBody2D" parent="ColisorTextBox"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisorTextBox/HitboxTextBox" groups=["chaos"]]
shape = SubResource("RectangleShape2D_kry3j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisorTextBox"]
shape = SubResource("RectangleShape2D_jjvhh")
debug_color = Color(0, 1, 0.701961, 0.419608)

[node name="TextBox" type="LineEdit" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 120.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(60, 30)
placeholder_text = "0000"
alignment = 1
max_length = 4
emoji_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
caret_blink = true
script = ExtResource("2_sdsba")

[connection signal="mouse_entered" from="ColisorTextBox" to="ColisorTextBox" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ColisorTextBox" to="ColisorTextBox" method="_on_mouse_exited"]
[connection signal="focus_entered" from="TextBox" to="." method="_on_text_box_focus_entered"]
[connection signal="focus_exited" from="TextBox" to="." method="_on_text_box_focus_exited"]
[connection signal="text_changed" from="TextBox" to="." method="_on_text_box_text_changed"]
[connection signal="text_submitted" from="TextBox" to="." method="_on_text_box_text_submitted"]
